# ModernCpp

./: CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/PetrolStation/: CMakeLists.txt
libs/gtest/: README.md
tests/: CMakeLists.txt  example_tests.cpp
